tests/__snapshots__/validation-configFile-tabs-wrong-option-value-type-stderr.snap.txt
Error: Option 'rootPath' requires an argument of type string.

  1 | {
  2 |  "failFast": false,
> 3 |  "rootPath": true
    |              ^
  4 | }
  5 | 

      at ./tstyche.config.json:3:14

